samples/_failures_safe/1761517853_a31beb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_76616675.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_76616675.c:167:48: error: expected ‘)’ at end of input
  167 |             *column += (int)strlen(token->value
      |                                   ~            ^
      |                                                )
./samples/SAFE/__tmp_76616675.c:167:13: error: expected declaration or statement at end of input
  167 |             *column += (int)strlen(token->value
      |             ^
./samples/SAFE/__tmp_76616675.c:167:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_76616675.c:167:13: error: expected declaration or statement at end of input
